--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
       </main>
     </div>
 
+    <div id="active-users">
+      <h2>Active Users</h2>
+      <ul>
+        <li>You</li>
+      </ul>
+    </div>
+
         <div class="login-container" id="login-container">
           <h2>Enter a name to continue!</h2>
           <form id="login-form">
